--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,4 +1,9 @@
 page.home=/WEB-INF/view/home/home_page.jsp
 page.registration=/WEB-INF/view/registration_page.jsp
 page.login=/WEB-INF/view/login_page.jsp
-page.customer=/WEB-INF/view/menu/customer_menu.jsp
+page.user_home_page=/WEB-INF/view/menu/user_menu.jsp
+page.book_creating=/WEB-INF/view/book/book_creator_page.jsp
+page.book_showing=/WEB-INF/view/book/simple.jsp
+page.enter_error=/WEB-INF/view/error/enter_error.jsp
+
+path.books=viclay.com?command=book_showing
