--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -3,7 +3,10 @@ page.registration=/WEB-INF/view/registration_page.jsp
 page.login=/WEB-INF/view/login_page.jsp
 page.user_home_page=/WEB-INF/view/menu/user_menu.jsp
 page.book_creating=/WEB-INF/view/book/book_creator_page.jsp
-page.book_showing=/WEB-INF/view/book/simple.jsp
+page.books_showing=/WEB-INF/view/book/simple.jsp
 page.enter_error=/WEB-INF/view/error/enter_error.jsp
+page.book_showing=/WEB-INF/view/book/book_showing.jsp
+
+url.home=/viclay.com
 
 path.books=viclay.com?command=book_showing
