--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,52 @@
   </properties>
 
   <dependencies>
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/javax.jws/javax.jws-api &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>javax.jws</groupId>-->
+<!--      <artifactId>javax.jws-api</artifactId>-->
+<!--      <version>1.1</version>-->
+<!--    </dependency>-->
+
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/javax.xml.ws/jaxws-api &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>javax.xml.ws</groupId>-->
+<!--      <artifactId>jaxws-api</artifactId>-->
+<!--      <version>2.3.1</version>-->
+<!--    </dependency>-->
+
+<!--    <dependency>-->
+<!--      <groupId>com.sun.xml.ws</groupId>-->
+<!--      <artifactId>rt</artifactId>-->
+<!--      <version>2.3.1</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>rt</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
+
+
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.17.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.17.1</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -51,6 +97,12 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>20.1.0</version>
+      <scope>compile</scope>
     </dependency>
 
   </dependencies>
@@ -90,5 +142,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
