Was added new possibility to update book information

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -3,10 +3,13 @@ page.registration=/WEB-INF/view/registration_page.jsp
 page.login=/WEB-INF/view/login_page.jsp
 page.user_home_page=/WEB-INF/view/menu/user_menu.jsp
 page.enter_error=/WEB-INF/view/error/enter_error.jsp
+page.error=/WEB-INF/view/error/common_error_page.jsp
+page.common_error=/WEB-INF/view/error/common_error_page.jsp
 
 page.book_creating=/WEB-INF/view/book/book_creator_page.jsp
 page.books_showing=/WEB-INF/view/book/books_page.jsp
 page.book_showing=/WEB-INF/view/book/book_page.jsp
+page.update_book=/WEB-INF/view/book/book_update_page.jsp
 
 url.home=/viclay.com
 
