--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 
 <!--  <servlet-mapping>-->
 <!--    <servlet-name>mainServlet</servlet-name>-->
-<!--    <url-pattern>/login</url-pattern>-->
+<!--    <url-pattern>/*</url-pattern>-->
 <!--  </servlet-mapping>-->
 
   <servlet-mapping>
@@ -46,5 +46,12 @@
     <url-pattern>/*</url-pattern>
 <!--    <servlet-name>controller</servlet-name>-->
   </filter-mapping>
+
+
+
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/view/error/404.jsp</location>
+  </error-page>
 
 </web-app>
