Added delete command and other linked classes and pages

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -10,6 +10,7 @@ page.book_creating=/WEB-INF/view/book/book_creator_page.jsp
 page.books_showing=/WEB-INF/view/book/books_page.jsp
 page.book_showing=/WEB-INF/view/book/book_page.jsp
 page.update_book=/WEB-INF/view/book/book_update_page.jsp
+page.delete_book_page=/WEB-INF/view/book/book_delete_page.jsp
 
 url.home=/viclay.com
 
