Updated employee menu for create and update operation

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -12,6 +12,10 @@ page.book_showing=/WEB-INF/view/book/book_page.jsp
 page.update_book=/WEB-INF/view/book/book_update_page.jsp
 page.delete_book_page=/WEB-INF/view/book/book_delete_page.jsp
 
+
+page.employee_menu=/WEB-INF/view/menu/employee_menu.jsp
+
+
 url.home=/viclay.com
 
 path.books=viclay.com?command=book_showing
