--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -14,6 +14,7 @@ page.delete_book_page=/WEB-INF/view/book/book_delete_page.jsp
 
 
 page.employee_menu=/WEB-INF/view/menu/employee_menu.jsp
+page.admin_menu=/WEB-INF/view/menu/admin_menu.jsp
 
 
 url.home=/viclay.com
