--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,37 +4,18 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
   version="3.0">
 
-<!--  <servlet>-->
-<!--    <servlet-name>mainServlet</servlet-name>-->
-<!--    <servlet-class>MainServlet</servlet-class>-->
-<!--  </servlet>-->
   <servlet>
     <servlet-name>controller</servlet-name>
     <servlet-class>com.victor.latyshey.controller.ServletController</servlet-class>
   </servlet>
-  <servlet>
-    <servlet-name>indexServlet</servlet-name>
-    <servlet-class>IndexServlet</servlet-class>
-  </servlet>
-
-<!--  <servlet-mapping>-->
-<!--    <servlet-name>mainServlet</servlet-name>-->
-<!--    <url-pattern>/*</url-pattern>-->
-<!--  </servlet-mapping>-->
-
   <servlet-mapping>
     <servlet-name>controller</servlet-name>
     <url-pattern>/viclay.com</url-pattern>
   </servlet-mapping>
 
-  <servlet-mapping>
-    <servlet-name>indexServlet</servlet-name>
-    <url-pattern>/enter</url-pattern>
-  </servlet-mapping>
-
   <filter>
     <filter-name>encodingFilter</filter-name>
-    <filter-class>com.victor.latyshey.filters.EncodingFilter</filter-class>
+    <filter-class>com.victor.latyshey.controller.filter.EncodingFilter</filter-class>
     <init-param>
       <param-name>active</param-name>
       <param-value>true</param-value>
@@ -44,10 +25,7 @@
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
-<!--    <servlet-name>controller</servlet-name>-->
   </filter-mapping>
-
-
 
   <error-page>
     <error-code>404</error-code>
