--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,36 @@
 
   <dependencies>
 
-<!--    &lt;!&ndash; https://mvnrepository.com/artifact/javax.jws/javax.jws-api &ndash;&gt;-->
-<!--    <dependency>-->
-<!--      <groupId>javax.jws</groupId>-->
-<!--      <artifactId>javax.jws-api</artifactId>-->
-<!--      <version>1.1</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.3.1</version>
+    </dependency>
 
-<!--    &lt;!&ndash; https://mvnrepository.com/artifact/javax.xml.ws/jaxws-api &ndash;&gt;-->
-<!--    <dependency>-->
-<!--      <groupId>javax.xml.ws</groupId>-->
-<!--      <artifactId>jaxws-api</artifactId>-->
-<!--      <version>2.3.1</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>4.3.1</version>
+    </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>com.sun.xml.ws</groupId>-->
-<!--      <artifactId>rt</artifactId>-->
-<!--      <version>2.3.1</version>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.8.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.8.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>javax.xml.ws</groupId>
